AFS_Dev/src/objects/Quote_Financial_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Financial_Summary_Type__c</fullName>
        <label>Financial Summary Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW_SW_Costs__c</fullName>
        <label>HW/SW Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OI_Value__c</fullName>
        <label>OI Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OI__c</fullName>
        <label>OI %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quote Financial Summaries</relationshipLabel>
        <relationshipName>Financial_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Costs__c</fullName>
        <label>Other Cost Components</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Financial Summary</relationshipLabel>
        <relationshipName>Financial_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>TCR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Expenses__c</fullName>
        <label>Subcontractor Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Difference__c</fullName>
        <label>Target Difference %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target_OI__c</fullName>
        <label>Target OI%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WTD_Current_Revenue__c</fullName>
        <label>WTD Current Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Financial Summary</label>
    <nameField>
        <displayFormat>FS - {000000000}</displayFormat>
        <label>Financial Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Financial Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>